17-02-2007 Qball <Qball@Sarine.nl>
	* src/main.c:	Change order, so config isn't destroyed before f.e. meta
	data thread uses it.

01-02-2007 Qball <Qball@Sarine.nl.
	* src/playlist3.c:	Make pl3_window_fullscreen function.
	* glade/playlist3.glade:	Add fullscreen menu entry.

31-01-2007 Qball <Qball@Sarine.nl>
	* src/main.c:	A non-svn version by default no longer displays debug
	information.
	* src/main.c:	Ignore MPD_ACK_ERROR_EXISTS errors so playlist out of
	sync is handled less obstructive. (it does seem to correct itself anyway)
	* src/playlist-list.c:	Don't crash if you can't fetch the song.
	* src/main.c:	Stop error message spammage

26-01-2007 Qball <Qball@Sarine.nl>
    * src/id3info.c:				Add some performer code.
    * src/playlist-list.c:			Adding performer support.
    * src/playlist3-file-browser.c: hopefully fix stupid bug again.
	
25-01-2007 Qball <Qball@sarine.nl>
	* src/metadata.h:	Make gmpc wait for the meta_thread to finish.

10-01-2007 Qball <Qball@Sarine.nl>
	* src/preferences.c:	Changed the background to a lighter color

09-01-2007 Qball <Qball@sarine.nl>
	* src/metadata.c: Add an option to rename 'Jones, Norah' to 'Norah Jones'

 05-01-2007 Qball <Qball@sarine.nl>
 	* src/pixmaps: gmpc-add-url.png added

 02-01-2007 Qball <Qball@sarine.nl>
 	* configure.ac: fix a macro
	* src/playlist3-find[2|3]-browser.c:	adding border around blue bar.
	* configure.ac:	Bump to libmpd 0.12.11
	* src/playlist3-find3-browser.c:		adding performer

 31-12-2006 Qball <Qball@sarine.nl>
    * src/playlist3-find3-browser.c:	Fix ctrl-j
    * src/playlist3-find2-browser.c:	Cleanups

30-12-2006 Qball <qball@qballcow.nl>
    * src/*:				Update for api
    * src/plugin.h: 			Change plugin api
    * src/main.c: 			Change loading order
    * src/*.c:				Renumber Function keybindings
    * src/playlist3-find3-browser.*: 	Added a playlist search.
    * src/playlist3-find2-browser.c: 	Use gtk_tree_row_reference to select
    browser.